--- a/package.json
+++ b/package.json
@@ -12,16 +12,21 @@
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
     "headlessui": "^0.0.0",
+    "lodash": "^4.17.21",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-intersection-observer": "^8.33.1",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "postcss": "^8.4.6",
+    "prettier-plugin-tailwindcss": "^0.1.7",
     "tailwindcss": "^3.0.18"
   }
 }
