--- a/package.json
+++ b/package.json
@@ -12,12 +12,20 @@
   "dependencies": {
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
+    "@mantine/core": "^4.0.7",
+    "@mantine/dates": "^4.0.7",
+    "@mantine/dropzone": "^4.0.7",
+    "@mantine/form": "^4.0.7",
+    "@mantine/hooks": "^4.0.7",
+    "@mantine/next": "^4.0.7",
+    "dayjs": "^1.11.0",
     "headlessui": "^0.0.0",
     "lodash": "^4.17.21",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-intersection-observer": "^8.33.1",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
