--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
   "files.exclude": {
     ".DS_Store": true,
-    ".env.local": true,
-    ".env.production": true,
+    // ".env.local": true,
+    // ".env.production": true,
     ".eslintrc.js": true,
     ".git": true,
     ".gitattributes": true,
