--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-intersection-observer": "^8.33.1",
+    "react-query": "^3.34.19",
     "tailwind-scrollbar": "^1.3.1",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
