--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "17.0.2",
     "react-intersection-observer": "^8.33.1",
     "react-query": "^3.34.19",
+    "recoil": "^0.7.2",
     "tailwind-scrollbar": "^1.3.1",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
