--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "dayjs": "^1.11.0",
     "headlessui": "^0.0.0",
     "lodash": "^4.17.21",
-    "next": "12.0.10",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^12.1.6",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-intersection-observer": "^8.33.1",
     "react-query": "^3.34.19",
     "recoil": "^0.7.2",
