--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mantine/form": "^4.0.7",
     "@mantine/hooks": "^4.0.7",
     "@mantine/next": "^4.0.7",
+    "@mantine/notifications": "^4.2.6",
     "dayjs": "^1.11.0",
     "headlessui": "^0.0.0",
     "lodash": "^4.17.21",
