Implement Signin with Next Auth

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_BACKEND_URL=http://localhost:8000
 NODE_PATH=src/
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=4knqE02Dzrv+CM3T3LpW/5S3+ohSOyc/zguJVGUcPPE=
