--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,3 @@
-NEXT_PUBLIC_BACKEND_URL=http://128.199.185.137:8000
+NEXT_PUBLIC_BACKEND_URL=http:/api.speakup.place:8000
+NEXTAUTH_URL=http://speakup.place
+NEXTAUTH_SECRET=4knqE02Dzrv+CM3T3LpW/5S3+ohSOyc/zguJVGUcPPE=
