--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "headlessui": "^0.0.0",
     "lodash": "^4.17.21",
     "next": "^12.1.6",
+    "next-auth": "^4.3.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-intersection-observer": "^8.33.1",
