--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_BACKEND_URL=http:/api.speakup.place:8000
-NEXTAUTH_URL=http://speakup.place
+NEXT_PUBLIC_BACKEND_URL=https://api.speakup.place:8000
+NEXTAUTH_URL=https://speakup.place
 NEXTAUTH_SECRET=4knqE02Dzrv+CM3T3LpW/5S3+ohSOyc/zguJVGUcPPE=
