--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,18 @@
-{
-  "files.exclude": {
-    ".DS_Store": true,
-    // ".env.local": true,
-    // ".env.production": true,
-    ".git": true,
-    ".gitattributes": true,
-    ".gitignore": true,
-    ".next": true,
-    ".prettierignore": true,
-    ".prettierrc": true,
-    "next.config.js": true,
-    "node_modules": true,
-    "package-lock.json": true,
-    "postcss.config.js": true,
-    "runbe.sh": true
-  }
-}
+// {
+//   "files.exclude": {
+//     ".DS_Store": true,
+//     // ".env.local": true,
+//     // ".env.production": true,
+//     ".git": true,
+//     ".gitattributes": true,
+//     ".gitignore": true,
+//     ".next": true,
+//     ".prettierignore": true,
+//     ".prettierrc": true,
+//     "next.config.js": true,
+//     "node_modules": true,
+//     "package-lock.json": true,
+//     "postcss.config.js": true,
+//     "runbe.sh": true
+//   }
+// }
